option java_package = "com.dianping.pigeon.rpc.protobuf";
option java_outer_classname = "ProtobufRequest";

message ProtobufRequest {
	required int64 seq = 2;
	required int32 messageType = 2;
	required int32 callType = 2;
    required int32 timeout = 2;
    required String url = 2;
    required String methodName = 2;
    optional Object[] parameters = 2;
    optional Object context = 2;
    optional String version = 2;
}